force-app/main/default/objects/S2O_Code_Mapping__c/S2O_Code_Mapping__c.object-meta.xml
<CustomObject>
    <label>S2O Code Mapping</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>S2O Code Mapping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>S2O Code Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>