force-app/main/default/objects/S2O_Code_Mapping__c/fields/CRM_Task_Key__c.field-meta.xml
<CustomField>
    <fullName>CRM_Task_Key__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CRM Task Key</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>