force-app/main/default/objects/S2O_Code_Mapping__c/fields/EWM_Service_TH_Type_Desc__c.field-meta.xml
<CustomField>
    <fullName>EWM_Service_TH_Type_Desc__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EWM Service TH Type Desc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>