force-app/main/default/objects/S2O_Code_Mapping__c/fields/EWM_Service_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>EWM_Service_Type_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>EWM Service Type Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>