force-app/main/default/objects/S2O_Code_Mapping__c/fields/Service_Level_2__c.field-meta.xml
<CustomField>
    <fullName>Service_Level_2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Service Level 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>